[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for my custom blog"
authors = ["meliodas0n <mrunalnarayana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
pylint = "^3.0.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
